@@ -771,7 +771,9 @@ void Database::GetCharName(uint32 char_id, char* name) {
 	}
 
 	auto row = results.begin();
-	strcpy(name, row[0]);
+	for (auto row = results.begin(); row != results.end(); ++row) {
+		strcpy(name, row[0]);
+	}
 }
 
 bool Database::LoadVariables() {
