@@ -540,3 +540,4 @@ N(OP_OpenInventory),
 N(OP_OpenContainer),
 N(OP_Marquee),
 N(OP_ClientTimeStamp),
+N(OP_GuildPromote),
