@@ -125,6 +125,7 @@ OP_GuildLeader=0x7c6f
 OP_GuildDelete=0x241b
 OP_GuildInviteAccept=0x78a5
 OP_GuildDemote=0x3100
+OP_GuildPromote=0x2945
 OP_GuildPublicNote=0x3c2c
 OP_GuildManageBanker=0x096d			# Was 0x0737
 OP_GuildBank=0x2ab0					# Was 0x10c3
